use standard css classes for margin and padding

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 @import '~fiori-fundamentals/dist/fiori-fundamentals.min.css';
 
-.App {
-  margin: 1rem 5rem;
+.app-container {
   text-align: center;
 }
